# function_approximation

./: CMakeLists.txt  approximation.cpp  approximation.h  deviation.cpp  deviation.h  graph.cpp  graph.h  main.cpp  process.cpp  process.h  table.cpp  table.h  todo.md  util.cpp  util.h
